@@ -1,4 +1,6 @@
 
+	- Added support for wildfire to communicate with Zend Framework component
+
 2008-07-13 - Release Version: 0.1.0.2
 
 	- Added X-FirePHP-Agent request header when visiting FirePHP related sites
